--- a/about.Rmd
+++ b/about.Rmd
@@ -14,18 +14,15 @@ knitr::opts_chunk$set(echo = FALSE)
 ```
 
 ## About me
-I'm an advanced imaging specialist for Nikon UK, predominantly advicing scientists on what microscopes to use, how to use them effectively, and how best to analyse their images. I'm mostly based around London, but sometimes go further afield.  
+I'm an advanced imaging specialist for Nikon UK, predominantly advising scientists on what microscopes to use, how to use them effectively, and how best to analyse their images. I'm mostly based around London, but sometimes go further afield.  
 
 
-Previously, I had been working as a post doc in  Prof. Juan Burrone's lab at Kings College London studying the action potential in neuronal axons using the latest genetically-encoded voltage indicators. Before that I worked as an electrophysiologist at Doshisha University, Japan, with Prof. Tomoyuki Takahashi, and before that I was at UCL where I did my PhD with Prof. Mark Farrant. A list of my publications are below. 
+Previously, I had been working as a post doc in  Prof. Juan Burrone's lab at Kings College London studying the action potential in neuronal axons using the latest genetically-encoded voltage indicators. Before that I worked as an electrophysiologist at Doshisha University, Japan, with Prof. Tomoyuki Takahashi, and before that I was at UCL where I did my PhD with Prof. Mark Farrant.
+
+
+## Contact  
+
+mark.rigby@nikon.com
 
 
 
-## Publications
-- Machado CB, Pluchon P, Harley P, Rigby M, Gonzalez Sabater V, Stevenson DC, Hynes S, Lowe A, Burrone J, Viasnoff V, Lieberam I (2019) In Vitro Modelling of Nerve-Muscle Connectivity in a Compartmentalised Tissue Culture Device. Adv Biosyst 3.  
-
-- Walker AS, Neves G, Grillo F, Jackson RE, Rigby M, O'Donnell C, Lowe AS, Vizcay-Barrena G, Fleck RA, Burrone J (2017) Distance-dependent gradient in NMDAR-driven spine calcium signals along tapering dendrites. Proc Natl Acad Sci U S A 114: E1986-E1995 
-
-- Rigby M, Cull-Candy SG, Farrant M. Transmembrane AMPAR regulatory protein γ-2 is required for the modulation of GABA release by presynaptic AMPARs.J Neurosci. 2015 Mar 11;35(10):4203-14. doi: 10.1523/JNEUROSCI.4075-14.2015.  
-
-- Bergerot A1, Rigby M, Bouvier G, Marcaggi P. Persistent posttetanic depression at cerebellar parallel fiber to Purkinje cell synapses. PLoS One. 2013 Jul 29;8(7):e70277. doi: 10.1371/journal.pone.0070277.
