--- a/_posts/JOB for specifying break during acquiisition/JOB for specifying break during acquiisition.Rmd
+++ b/_posts/JOB for specifying break during acquiisition/JOB for specifying break during acquiisition.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "JOB for specifying break during acquiisition"
+title: "JOB for specifying break during acquisition"
 categories:
   - NIS-Elements
 description: |
@@ -10,7 +10,7 @@ author:
     affiliation: Nikon Insturments UK
     position: Advanced Imaging Specialist
     affiliation_url: https://www.microscope.healthcare.nikon.com/
-preview: images/preview.PNG
+preview: images/preview.png
 date: "`r Sys.Date()`"
 output:
   distill::distill_article:
