--- a/_posts/202005 paper roundup/202005 paper roundup.Rmd
+++ b/_posts/202005 paper roundup/202005 paper roundup.Rmd
@@ -24,11 +24,11 @@ library(knitr)
 library(twitterwidget)
 ```
 
-The first edition of the paper roundup appears to be heavily fluorophore-based. Perhaps this is a sign of things to come but 
+The first edition of the paper round up appears to be heavily fluorophore-based. Perhaps this is a sign of things to come but 
 
 ## New, brighter, mEOS3.2 variants
 
-mMaple3 and mEOS4.2 are currently the go to green/red photo-convertible fluoresent proteins for fixed cell SMLM. However, for live SMLM perhaps these new variants developed by Marathe et al now edge it. The newly developed mEosBrite variants that are reported to have higher quantum yield, and reduced cyto-toxicity compared to the original mEos3.2.  
+mMaple3 and mEOS4.2 are currently the go to green/red photo-convertible fluorescent proteins for fixed cell SMLM. However, for live SMLM perhaps these new variants developed by Marathe et al now edge it. The newly developed mEosBrite variants that are reported to have higher quantum yield, and reduced cyto-toxicity compared to the original mEos3.2.  
 
 https://doi.org/10.1007/s10895-020-02537-8
 <br>
