--- a/_posts/JOBS Implementing PFS routines/JOBS Implementing PFS routines.Rmd
+++ b/_posts/JOBS Implementing PFS routines/JOBS Implementing PFS routines.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "JOBS: Implementing PFS routines"
+title: "JOBS: Implementing Perfect focus routines"
 categories:
   - NIS-Elements
   - JOBs
